configuracoes de deploy

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://YudiYamada.github.io/gerenciador-de-projetos",
-  "name": "a-base-do-react",
+  "name": "gerenciador-de-projetos",
   "private": true,
   "version": "0.0.0",
   "type": "module",
