--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://YudiYamada.github.io/gerenciador-de-projetos",
   "name": "gerenciador-de-projetos",
   "private": true,
   "version": "0.0.0",
