--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "a-base-do-react",
+  "name": "gerenciador-de-projetos",
   "private": true,
   "version": "0.0.0",
   "type": "module",
