--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "backend": "json-server --watch db.json --port 5000",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "json-server": "^1.0.0-beta.3",
